--- a/Android-App/app/src/main/res/values/colors.xml
+++ b/Android-App/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!-- Custom -->
+    <color name="bg_front">#3d5af1</color>
 </resources>
