--- a/Android-App/app/src/main/res/layout/activity_password_recovery.xml
+++ b/Android-App/app/src/main/res/layout/activity_password_recovery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_login"
-    tools:context=".ui.Login">
+    tools:context=".ui.PasswordRecovery">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -29,24 +29,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12sp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginEnd="12sp"
                 android:autofillHints="emailAddress"
-                android:hint="@string/login1"
+                android:hint="@string/recovery1"
                 android:inputType="textEmailAddress"
-                android:minHeight="48dp" />
-
-            <EditText
-                android:id="@+id/txt_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12sp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="12sp"
-                android:layout_marginBottom="40sp"
-                android:autofillHints="emailAddress"
-                android:hint="@string/login2"
-                android:inputType="textPassword"
                 android:minHeight="48dp" />
 
         </LinearLayout>
@@ -55,42 +43,30 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/btn_login"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:id="@+id/btn_reset_password"
+        android:layout_width="216dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="36dp"
         android:background="@color/bg_front"
         android:gravity="center_horizontal"
-        android:text="@string/login3"
+        android:text="@string/recovery2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
-        android:id="@+id/txt_daftar"
+        android:id="@+id/txt_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:gravity="center"
-        android:text="@string/login4"
+        android:text="@string/recovery3"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/txt_password_recovery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:text="@string/login5"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_daftar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
