Dashboard User dan Fragment User

--- a/Android-App/app/src/main/res/values/colors.xml
+++ b/Android-App/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <!-- Custom -->
     <color name="bg_front">#3d5af1</color>
+    <color name="hover_menu">#D1A54D</color>
 </resources>
