--- a/Android-App/app/src/main/res/layout/activity_dashboard_user.xml
+++ b/Android-App/app/src/main/res/layout/activity_dashboard_user.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
+        android:background="@color/white"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
