--- a/Android-App/app/src/main/res/layout/fragment_home_user.xml
+++ b/Android-App/app/src/main/res/layout/fragment_home_user.xml
@@ -73,7 +73,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="180dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.559"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcLaundry"
         android:layout_width="341dp"
         android:layout_height="288dp"
         android:layout_marginStart="30dp"
