--- a/Android-App/app/src/main/res/layout/fragment_akun_store.xml
+++ b/Android-App/app/src/main/res/layout/fragment_akun_store.xml
@@ -89,7 +89,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10sp"
             android:layout_marginBottom="10sp"
-            android:text="TAMBAH" />
+            android:text="SIMPAN" />
 
     </LinearLayout>
 
