Tampil Order Baru di Halaman Laundry

--- a/Android-App/app/src/main/res/layout/fragment_akun_store.xml
+++ b/Android-App/app/src/main/res/layout/fragment_akun_store.xml
@@ -81,15 +81,39 @@
             android:gravity="top"
             android:hint="Alamat"
             android:inputType="text|textMultiLine" />
+        <androidx.constraintlayout.widget.ConstraintLayout
 
-        <Button
-            android:id="@+id/btn_tambah2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
-            android:text="SIMPAN" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_tambah2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="72dp"
+                android:text="SIMPAN"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_logout"
+                app:layout_constraintHorizontal_bias="0.044"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/btn_logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="100dp"
+                android:backgroundTint="@color/marron"
+                android:text="LOGOUT"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </LinearLayout>
 
