--- a/Android-App/app/src/main/res/layout/fragment_home_store.xml
+++ b/Android-App/app/src/main/res/layout/fragment_home_store.xml
@@ -43,8 +43,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="105dp"
+        android:layout_height="94dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="184dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcLaundry"
+        android:id="@+id/rcOrder"
         android:layout_width="341dp"
         android:layout_height="350dp"
         android:layout_marginTop="20dp"
